--- a/index.html
+++ b/index.html
@@ -12,42 +12,68 @@
 <body>
 
      <div class="header">
+          <div class="box_logo"> <img src="./images/logo.png"></div>
           <nav class="menu">
                <ul>
-                   <li>
-                       <a href="./index.html">INÍCIO</a>
-                   </li>
-                   <li>
-                       <a href="#">SOBRE BERLIM</a>
-                   </li>
-                   <li>
-                       <a href="#">PONTOS TURÍSTICOS</a>
-                   </li>
+                    <li>
+                         <a href="./index.html">INÍCIO</a>
+                    </li>
+                    <li>
+                         <a href="#">SOBRE BERLIM</a>
+                    </li>
+                    <li>
+                         <a href="#">PONTOS TURÍSTICOS</a>
+                    </li>
                </ul>
-           </nav>
+          </nav>
      </div>
 
-     <div class="fadeIn"><div class="box_title"><h1>O GAMBITO EM BERLIM</h1></div></div>
+     <div class="fadeIn">
+          <div class="box_title">
+               <h1>O GAMBITO EM BERLIM</h1>
+          </div>
+     </div>
 
-<div class="box_subtitle"><h2>O fenômeno que impulsionou o xadrez. Conheça Berlim, a capital da Alemanha onde diversas cenas da série "O Gambito da Rainha" foram gravadas. Disponível na Netflix™.</h2>
-</div>
+     <div class="box_subtitle">
+          <h2>O fenômeno que impulsionou o xadrez. Conheça Berlim, a capital da Alemanha onde diversas cenas da série "O
+               Gambito da Rainha" foram gravadas. Disponível na Netflix™.</h2>
+     </div>
 
-<div class="box_logo"> <img src="./images/logo.png"></div>
-<div class="box_image"> <img src="./images/gambito.png" alt="O Gambito da Rainha" width="490px"> </div>
 
-<div class="container"> 
- <div class="box">
+     <div class="box_image"> <img src="./images/gambito.png" alt="O Gambito da Rainha" width="490px"> </div>
 
-<h3>Visite os principais pontos turísticos de Berlim </h3>
+     <div class="container">
+          <div class="box">
 
-<div class="images">
-     <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM" width="280" height="350"  class="media-object  img-responsive img-thumbnail"></a> <p>Bode Museum</p> </div>
-<a href="https://www.google.com"><div class="images"> <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER" width="280" height="350" class="media-object  img-responsive img-thumbnail"></a> <p>Berliner Mauer</p> </div>
-     <div class="images"> <img src="./images/reichstag.jpeg" alt="REICHSTAG" width="280" height="350"  class="media-object  img-responsive img-thumbnail"></a> <p>Reichstag</p> </div>
-     <div class="images">  <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor" width="280" height="350"  class="media-object  img-responsive img-thumbnail"></a> <p>Brandemburger Tor</p> </div>
-</div>
-</div>
-</div>
+               <h3>Visite os principais pontos turísticos de Berlim </h3>
+
+               <div class="images">
+                    <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM" width="280" height="350"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p>Bode Museum</p>
+               </div>
+
+               <div class="images">
+                    <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER" width="280" height="350"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p>Berliner Mauer</p>
+               </div>
+
+
+               <div class="images">
+                    <img src="./images/reichstag.jpeg" alt="REICHSTAG" width="280" height="350"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p>Reichstag</p>
+               </div>
+               <div class="images">
+                    <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor" width="280" height="350"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p>Brandemburger Tor</p>
+               </div>
+               
+          </div>
+     </div>
 
 </body>
+
 </html>
