--- a/index.html
+++ b/index.html
@@ -16,25 +16,22 @@
           <nav class="menu">
                <ul>
                     <li>
-                         <a href="./index.html">Início</a>
+                         <a href="#inicio">Início</a>
                     </li>
                     <li>
-                         <a href="#">Sobre Berlim</a>
+                         <a href="#sobre" >Sobre Berlim</a>
                     </li>
                     <li>
-                         <a href="#">Pontos turísticos</a>
+                         <a href="#pontos">Pontos turísticos</a>
                     </li>
                </ul>
           </nav>
 
-          <span class="target"></span>
      </div>
 
-     <div class="fadeIn">
-          <div class="box_title">
+          <div class="box_title fadeIn" id="inicio">
                <h1>O Gambito em Berlim</h1>
           </div>
-     </div>
 
      <div class="box_subtitle">
           <h2>O fenômeno que impulsionou o xadrez. Conheça Berlim, a capital da Alemanha onde diversas cenas da série "O
@@ -43,7 +40,7 @@
 
      <div class="box_image"> <img src="./images/beth.png" alt="O Gambito da Rainha" width="850"> </div>
 
-     <div class="container_about">
+     <div class="container_about" id="sobre">
           <div class="box">
                <h3>Sobre Berlim </h3>
                <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo molestias sequi repudiandae dicta ex
@@ -76,7 +73,7 @@
      <div class="container">
           <div class="box">
 
-               <div class="text">
+               <div class="text" id="pontos">
                     <h3>Visite os principais pontos turísticos </h3>
                </div>
 
