correção de bugs gerais e ajustado o container de pontos turisticos

--- a/index.html
+++ b/index.html
@@ -75,30 +75,25 @@
           </div>
      </div>
 
-     <div class="container">
-          <div class="box">
+     <div class="container" id="pontos">
+          
+          <h3>Visite os principais pontos turísticos </h3>
 
-               <div class="text" id="pontos">
-                    <h3>Visite os principais pontos turísticos </h3>
-               </div>
-
-               <div class="images">
-                    <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM" width="280" height="350"
-                         class="media-object  img-responsive img-thumbnail"></a>
-                    <p>Bode Museum</p>
-               </div>
-               <a href="https://www.google.com">
-                    <div class="images"> <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER" width="280"
-                              height="350" class="media-object  img-responsive img-thumbnail">
-               </a>
+     <div class="box">
+          <div class="image">
+               <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM" class="media-object  img-responsive img-thumbnail">
+               <p>Bode Museum</p>
+          </div>
+          <div class="image"> 
+               <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER" class="media-object  img-responsive img-thumbnail">
                <p>Berliner Mauer</p>
           </div>
-          <div class="images"> <img src="./images/reichstag.jpeg" alt="REICHSTAG" width="280" height="350"
-                    class="media-object  img-responsive img-thumbnail"></a>
+          <div class="image">
+               <img src="./images/reichstag.jpeg" alt="REICHSTAG" class="media-object  img-responsive img-thumbnail">
                <p>Reichstag</p>
           </div>
-          <div class="images"> <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor" width="280" height="350"
-                    class="media-object  img-responsive img-thumbnail"></a>
+          <div class="image">
+               <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor" class="media-object  img-responsive img-thumbnail">
                <p>Brandemburger Tor</p>
           </div>
      </div>
