ajuste no card de avaliação

--- a/ponto_turistico.html
+++ b/ponto_turistico.html
@@ -54,17 +54,25 @@
 
                     <h3>avaliações:</h3>
                     <div class="avaliation">
-                        <img class="person_img" src="./images/person.jpg" alt="">
-                        <div class="avaliation_text">
-                            <p class="person_name">Gatinho sorridente:</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                        <div class="avaliation_img">
+                            <img class="person_img" src="./images/person.jpg" alt="">
+                        </div>
+                        <div class="avaliation_content">
+                            <div class="avaliation_text">
+                                <p class="person_name">Gatinho sorridente:</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                            </div>
                         </div>
                     </div>
                     <div class="avaliation">
-                        <img class="person_img" src="./images/gato-furioso.jpg" alt="">
-                        <div class="avaliation_text">
-                            <p class="person_name">Gatinho não muito sorridente:</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                        <div class="avaliation_img">
+                            <img class="person_img" src="./images/gato-furioso.jpg" alt="">
+                        </div>
+                        <div class="avaliation_content">
+                            <div class="avaliation_text">
+                                <p class="person_name">Gatinho não muito sorridente:</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                            </div>
                         </div>
                     </div>
                 </div>
