correcao bug da caixa de comentario

--- a/ponto_turistico.html
+++ b/ponto_turistico.html
@@ -71,10 +71,17 @@
                         <p class="person_name">Clarice Freumann:</p>
                         <p>O Bode museum é um dos museus que compõem a Ilha dos museus, em Berlim. Pra mim é o mais
                             rico! Possui um acervo da idade média e da fase gótica, riquíssimo! Além de tudo, o prédio é
-                            belíssimo! Dos três museus q visitei, esse é o mais bonito!!</p>
-                        <p><b>Nota:</b> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
-                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
-                                class="fa-solid fa-star"></i></p>
+                            belíssimo! Dos três museus q visitei, esse é o mais bonito!!
+                        </p>
+                        
+                        <p class="grade">
+                            Nota:
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </p>
                     </div></div>
                 </div>
 
@@ -85,10 +92,18 @@
                     <div class="avaliation_content">
                         <div class="avaliation_text">
                         <p class="person_name">Anônimo:</p>
-                        <p>Bilhete único é caro, 12 euros, mas valeu a pena com todo o acervo que o museu oferece. Não
-                            apenas as obras, o edifício é maravilhoso.</p>
-                        <p><b>Nota:</b> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
-                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                        <p>
+                            Bilhete único é caro, 12 euros, mas valeu a pena com todo o acervo que o museu oferece. Não
+                            apenas as obras, o edifício é maravilhoso.
+                        </p>
+                        <p class="grade">
+                            Nota: 
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star gray-star"></i>
+                        </p>
                     </div>
                 </div></div>
             </div>
