--- a/index.html
+++ b/index.html
@@ -58,30 +58,50 @@
                               aria-current="true" aria-label="Slide 1"></button>
                          <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
                               aria-label="Slide 2"></button>
-                         <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2"
-                              aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
                          <div class="carousel-item active">
-                              <img src="./images/population.jpg" class="img-carousel" alt="Poulação de Berlim">
-                              <div class="carousel-caption d-none d-md-block">
-                                   <h5> <i class="fa-solid fa-people-group"></i> População</h5>
-                                   <p> Com uma população de aproximadamente 3,645 milhões habitantes, Berlim é
-                                        considerada a maior cidade da
-                                        Alemanha e a sétima área urbana mais povoada da União Europeia. (Fonte: Eurostat
-                                        / 2015)</p>
-                              </div>
-                         </div>
-                         <div class="carousel-item">
-                              <img src="./images/money.jpg" class="img-carousel" alt="...">
-                              <div class="carousel-caption d-none d-md-block">
-                                   <h5> <i class="fa-solid fa-euro-sign"></i> Moeda Local</h5>
-                                   <p>A moeda local é o Euro, voce pode usar o dólar americano para trocar
-                                        lá, mas cuidado pois esse processo ocorrerá uma dupla conversão e você pode
-                                        perder dinheiro.
-                                        Atualmente, €1 Euro está na faixa de R$5,60 em Real brasileiro e $1,10 em Dólar
-                                        americano. (Março/2022)
-                                   </p>
+                              <img src="./images/statistic.jpeg" class="img-carousel" alt="Poulação de Berlim">
+                              <div class="carousel-caption berlim-captions d-none d-md-block">
+                                   <div class="berlim-infos">
+                                        <div class="info">
+                                             <i class="fa-solid fa-people-group"></i>
+                                             <div class="info-body">
+                                                  <h6>POPULAÇÃO</h6>
+                                                  <p>Aprox.3,645 mi</p>
+                                                  <p>(Fonte: Eurostat / 2015)</p>
+                                             </div>
+                                        </div>
+                                        <div class="info">
+                                             <i class="fa-solid fa-euro-sign"></i>
+                                             <div class="info-body">
+                                                  <h6>MOEDA LOCAL</h6>
+                                                  <p>Euro $$</p>
+                                             </div>
+                                        </div>
+                                        <div class="info">
+                                             <i class="fa-solid fa-temperature-low"></i>
+                                             <div class="info-body">
+                                                  <h6>TEMPERATURA</h6>
+                                                  <p>9°C</p>
+                                             </div>
+                                        </div>
+                                        <div class="info">
+                                             <i class="fa-solid fa-language"></i>
+                                             <div class="info-body">
+                                                  <h6>IDIOMA</h6>
+                                                  <p>Alemão</p>
+                                             </div>
+                                        </div>
+                                        <div class="info">
+                                             <i class="fa-solid fa-utensils"></i>
+                                             <div class="info-body">
+                                                  <h6>GASTO ALIMENTAÇÃO</h6>
+                                                  <p>A partir de EUR 30,00</p>
+                                                  <small>Baseado em 3 refeições</small>
+                                             </div>
+                                        </div>
+                                   </div>
                               </div>
                          </div>
                          <div class="carousel-item">
@@ -92,8 +112,8 @@
                                         <p> É uma série original Netflix, foi lançada em 23 de
                                              Outubro de 2020 e conta a história de uma órfã prodígio do xadrez (Beth
                                              Harmon) que luta contra vícios enquanto enfrenta os maiores enxadristas do
-                                             mundo. A série teve boa parte de suas gravações em <b>Berlim</b>, que
-                                             foram:
+                                             mundo. A série teve boa parte de suas gravações em <b>Berlim</b>, em locais
+                                             como:
                                              Haus Cumberland, Schloss Schulzendorf, Palais am Funkturm, Bode-Museum
                                              entre outros.</p>
                                         <p> <i class="fa-solid fa-film"></i> <b>Gênero:</b> Drama</p>
