tourist spots pages done

--- a/bode_museum.html
+++ b/bode_museum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O Gambito em Berlim</title>
+    <title>Bode Museum</title>
     <link rel="stylesheet" href="./css/tourist_spot.css">
     <link rel="shortcut icon" href="./images/favicon.png">
     <script src="https://kit.fontawesome.com/ea0e8d9cb6.js" crossorigin="anonymous"></script>
