--- a/brandemburger_tor.html
+++ b/brandemburger_tor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berliner Mauer</title>
+    <title>Brandemburger Tor</title>
     <link rel="stylesheet" href="./css/tourist_spot.css">
     <link rel="shortcut icon" href="./images/favicon.png">
     <script src="https://kit.fontawesome.com/ea0e8d9cb6.js" crossorigin="anonymous"></script>
@@ -30,30 +30,44 @@
 
     <div class="container">
         <div class="title">
-            <h1>berliner mauer</h1>
+            <h1>brandemburger tor</h1>
         </div>
         <div class="images">
-            <img class="spot_images" src="./images/pontosturisticos/berliner2.webp" alt="">
-            <img class="spot_images" src="./images/pontosturisticos/berliner1.jfif" alt="">
-            <img class="spot_images" src="./images/pontosturisticos/Berliner3.jpg" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/brandenburger1.webp" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/brandenburger2.jpg" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/brandenburger3.jpg" alt="">
         </div>
         <section class="info">
             <p>
-                Em português, Muro de Berlim. Durante a 2ª Guerra Mundial, Berlim foi um grande alvo, a cidade ficou gravemente
-                destruída e muitos habitantes morreram.
-                A Alemanha então, foi dividida em dois países, Alemanha Oriental (União Soviética: comunismo) e Alemanha Ocidental
-                (democracia capitalista).
-                Com isso, milhões de pessoas fugiram de Berlim Oriental para Berlim Ocidental entre 1949 e 1961, a fim de evitar essas fugas,
-                a Alemanha Oriental construiu o Muro de Berlim, separando Berlim Ocidental e Oriental por cerca de 30 anos.
-                A queda do Muro de Berlim começou a dar início em 1989, quando o governo comunista foi extinto ali. Já em 1990, as duas
-                partes da Alemanha e Berlim foram reunidas novamente tornando novamente Berlim a capital da Alemanha.
+                Em português, Portão de Brandemburgo ou Porta de
+                Brandemburgo, é uma antiga porta da cidade, reconstruída no
+                final do século XVIII como um arco do triunfo neoclássico, e
+                hoje um dos marcos mais conhecidos da Alemanha. Trata-se
+                de uma enorme construção de 26 metros de altura que, com
+                seu estilo neoclássico, lembra as construções da Acrópolis de
+                Atenas. Em 1795, o monumento recebeu uma quadriga de
+                cobre que representa a Deusa da Vitória em uma carruagem
+                puxada por quatro cavalos em direção à cidade. A estátua que
+                se pode ver hoje em dia é uma cópia feita em Berlim ocidental
+                em 1969, já que a original foi destruída durante a Segunda
+                Guerra Mundial. Se tornou um dos principais ícones da capital
+                alemã e o símbolo do triunfo da paz sobre as armas. 
             </p>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-sack-dollar"></i> Preços dos ingressos:</h3>
                 <p>Gratuíto para todos</p>
 
                 <h3> <i class="fa-solid fa-clock"></i> horário de funcionamento:</h3>
-                <p>Todos os dias, 24h por dia.</p>
+                <p>24 horas por dia.</p>
+                <p>
+                    O único setor sujeito a horários de abertura e fechamento é a Sala do Silêncio, um
+                    recanto de paz e meditação localizado na zona norte da atração.
+                </p>
+                <p>Sala do Silêncio</p>
+                <p>de Março a Outubro: 11h00-18h00;</p>
+                <p>Novembro e Fevereiro: 11:00-17:00;</p>
+                <p>Dezembro e Janeiro 11:00-16:00;</p>
+
 
                 <h3><i class="fa-solid fa-comments"></i> avaliações:</h3>
                 <div class="avaliation">
@@ -105,14 +119,14 @@
             <div class="section_spacing"></div>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-square-poll-horizontal"></i> site oficial:</h3>
-                <p><a href="https://www.berlin.de/mauer/geschichte/bau-der-mauer/">https://www.berlin.de/mauer/geschichte/bau-der-mauer/
-                    </a></p>
+                <p><a href="http://www.brandenburg-gate.de/">http://www.brandenburg-gate.de/</a></p>
 
                 <h3><i class="fa-solid fa-map-location-dot"></i> como chegar:</h3>
-                <p>O muro de Berlim fica localizado no famoso East Side Gallery</p>
-                <p>Endereço: Mühlenstraße 3-100, 10243 Berlin, Alemanha.</p>
+                <p>Endereço: Pariser Platz, 10117. Berlin, Alemanha.</p>
+                <p><u>Metrô:</u> Brandenburger Tor, linha U55.</p>
+                <p><u>Trem:</u> Brandenburger Tor, linhas S1, S2 e S25.</p>
 
-                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77724.51441570539!2d13.364028946694079!3d52.49921127476096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851642fa10281%3A0xa1a6d660f47ed1e!2sBerliner%20Mauer!5e0!3m2!1spt-BR!2sbr!4v1647554027252!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155593.8609807529!2d13.076319825496972!3d52.45823696353942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c428a92a43%3A0x784cfd724198fb47!2sBrandenburger%20Tor!5e0!3m2!1spt-BR!2sbr!4v1647556520719!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
 
