--- a/reichstag.html
+++ b/reichstag.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berliner Mauer</title>
+    <title>Reichstag</title>
     <link rel="stylesheet" href="./css/tourist_spot.css">
     <link rel="shortcut icon" href="./images/favicon.png">
     <script src="https://kit.fontawesome.com/ea0e8d9cb6.js" crossorigin="anonymous"></script>
@@ -30,30 +30,31 @@
 
     <div class="container">
         <div class="title">
-            <h1>berliner mauer</h1>
+            <h1>reichstag</h1>
         </div>
         <div class="images">
-            <img class="spot_images" src="./images/pontosturisticos/berliner2.webp" alt="">
-            <img class="spot_images" src="./images/pontosturisticos/berliner1.jfif" alt="">
-            <img class="spot_images" src="./images/pontosturisticos/Berliner3.jpg" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/reichstag1.webp" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/reichstag2.jpg" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/reichstag3.webp" alt="">
         </div>
         <section class="info">
             <p>
-                Em português, Muro de Berlim. Durante a 2ª Guerra Mundial, Berlim foi um grande alvo, a cidade ficou gravemente
-                destruída e muitos habitantes morreram.
-                A Alemanha então, foi dividida em dois países, Alemanha Oriental (União Soviética: comunismo) e Alemanha Ocidental
-                (democracia capitalista).
-                Com isso, milhões de pessoas fugiram de Berlim Oriental para Berlim Ocidental entre 1949 e 1961, a fim de evitar essas fugas,
-                a Alemanha Oriental construiu o Muro de Berlim, separando Berlim Ocidental e Oriental por cerca de 30 anos.
-                A queda do Muro de Berlim começou a dar início em 1989, quando o governo comunista foi extinto ali. Já em 1990, as duas
-                partes da Alemanha e Berlim foram reunidas novamente tornando novamente Berlim a capital da Alemanha.
+                O antigo edifício do Reichstag é a sede do Parlamento Alemão (Deutscher Bundestag). Trata-se de um edifício histórico com
+                aspecto de templo clássico, coroado por uma grande cúpula moderna pela qual se pode transitar.
+                Situado ao lado da linha que marca o Muro de Berlim, o Reichstag permaneceu quase 29 anos separado do Portão de
+                Brandemburgo, apesar da proximidade.
+                A construção do edifício do parlamento foi finalizada em 1894. Durante seus primeiros anos, abrigou as forças políticas
+                alemãs até que, com o fim da I Guerra Mundial, trabalhadores e soldados ocuparam o edifício e foi declarada a República de
+                Weimar.
+                Depois da II Guerra Mundial, o edifício do parlamento ficou destruído e houve um intenso debate sobre sua derrubada ou
+                reconstrução. Finalmente, em 1956, optaram por reconstruí-lo, embora sem refazer sua cúpula original.
             </p>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-sack-dollar"></i> Preços dos ingressos:</h3>
                 <p>Gratuíto para todos</p>
 
                 <h3> <i class="fa-solid fa-clock"></i> horário de funcionamento:</h3>
-                <p>Todos os dias, 24h por dia.</p>
+                <p>Das 8:00 às 24:00 horas (Última entrada às 22:00 horas).</p>
 
                 <h3><i class="fa-solid fa-comments"></i> avaliações:</h3>
                 <div class="avaliation">
@@ -105,14 +106,14 @@
             <div class="section_spacing"></div>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-square-poll-horizontal"></i> site oficial:</h3>
-                <p><a href="https://www.berlin.de/mauer/geschichte/bau-der-mauer/">https://www.berlin.de/mauer/geschichte/bau-der-mauer/
-                    </a></p>
+                <p><a href="https://www.berliner-unterwelten.de/">https://www.berliner-unterwelten.de/</a></p>
 
                 <h3><i class="fa-solid fa-map-location-dot"></i> como chegar:</h3>
-                <p>O muro de Berlim fica localizado no famoso East Side Gallery</p>
-                <p>Endereço: Mühlenstraße 3-100, 10243 Berlin, Alemanha.</p>
+                <p>Endereço: Platz der Republik 1, 11011 Berlin, Alemanha</p>
+                <p><u>Ônibus:</u> linha 100.</p>
+                <p><u>Metrô:</u> Bundestag, linha U55.</p>
 
-                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77724.51441570539!2d13.364028946694079!3d52.49921127476096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851642fa10281%3A0xa1a6d660f47ed1e!2sBerliner%20Mauer!5e0!3m2!1spt-BR!2sbr!4v1647554027252!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2427.818692237092!2d13.373998515807454!3d52.518620179813865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c741ee506d%3A0x641b52d3abf17de5!2sPal%C3%A1cio%20do%20Reichstag!5e0!3m2!1spt-BR!2sbr!4v1647555440400!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
 
