queens gambit trailer on about

--- a/index.html
+++ b/index.html
@@ -52,17 +52,24 @@
      <div class="container_about" id="sobre">
           <div class="box box_about">
                <h3>Saiba mais</h3>
-               <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
+               <div id="carouselCaptions" class="carousel slide" data-bs-interval="false">
                     <div class="carousel-indicators">
                          <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
                               aria-current="true" aria-label="Slide 1"></button>
                          <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
                               aria-label="Slide 2"></button>
+                         <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2"
+                              aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
                          <div class="carousel-item active">
                               <img src="./images/statistic.jpeg" class="img-carousel" alt="Poulação de Berlim">
                               <div class="carousel-caption berlim-captions d-none d-md-block">
+                                   <h5>SOBRE BERLIM</h5>
+                                   <p>Berlim, capital e maior cidade da Alemanha fundada no inicio do século XII, foi
+                                        cidade-sede do reino germânico da Prússia durante os séculos XVIII e XIX. Berlim
+                                        é influenciada por um clima temperado sazonal. Cerca de um terço da área da
+                                        cidade é composta por florestas, parques, jardins, rios e lagos.</p>
                                    <div class="berlim-infos">
                                         <div class="info">
                                              <i class="fa-solid fa-people-group"></i>
@@ -108,7 +115,7 @@
                               <img src="./images/queensGambit.jpg" class="img-carousel" alt="...">
                               <div class="carousel-caption d-none d-md-block">
                                    <div class="queensText">
-                                        <h5>O GAMBITO DA RAINHA</h5>
+                                        <h5>SOBRE O GAMBITO DA RAINHA</h5>
                                         <p> É uma série original Netflix, foi lançada em 23 de
                                              Outubro de 2020 e conta a história de uma órfã prodígio do xadrez (Beth
                                              Harmon) que luta contra vícios enquanto enfrenta os maiores enxadristas do
@@ -139,6 +146,11 @@
 
                               </div>
                          </div>
+                         <div class="carousel-item">
+                              <iframe src="https://www.youtube.com/embed/oZn3qSgmLqI?autoplay=1">
+                              </iframe>
+
+                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
                          data-bs-slide="prev">
@@ -160,11 +172,9 @@
 
           <div class="box box_tourism">
                <div class="image">
-                    <!-- <a href="./bode_museum.html" target="_blank"> -->
-                         <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM"
-                              class="media-object  img-responsive img-thumbnail">
-                         <p class="img-paragraph">Bode Museum</p>
-                    <!-- </a> -->
+                    <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p class="img-paragraph">Bode Museum</p>
                </div>
                <div class="image">
                     <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER"
