--- a/index.html
+++ b/index.html
@@ -171,35 +171,25 @@
           <h3>Visite os principais pontos turísticos </h3>
 
           <div class="box box_tourism">
-               
-               <div class="image">
-                    <a href="./bode_museum.html" target="_blank">
-                         <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM"
-                              class="media-object  img-responsive img-thumbnail">
-                         <p class="img-paragraph">Bode Museum</p>
-                    </a>
+               <div id="img-bode" class="image">
+                    <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p class="img-paragraph bode">Bode Museum</p>
                </div>
-               
-               <div class="image">
-                    <a href="./berliner_mauer.html" target="_blank">
-                         <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER"
-                              class="media-object  img-responsive img-thumbnail">
-                         <p class="img-paragraph">Berliner Mauer</p>
-                    </a>
+               <div id="img-mauer" class="image">
+                    <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p class="img-paragraph mauer">Berliner Mauer</p>
                </div>
-               <div class="image">
-                    <a href="./reichstag.html" target="_blank">
-                         <img src="./images/reichstag.jpeg" alt="REICHSTAG"
-                              class="media-object  img-responsive img-thumbnail">
-                         <p class="img-paragraph">Reichstag</p>
-                    </a>
+               <div id="img-reich" class="image">
+                    <img src="./images/reichstag.jpeg" alt="REICHSTAG"
+                         class="media-object  img-responsive img-thumbnail">
+                    <p class="img-paragraph reich">Reichstag</p>
                </div>
-               <div class="image">
-                    <a href="./brandemburger_tor.html" target="_blank">
-                         <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor"
-                              class="media-object  img-responsive img-thumbnail">
-                         <p class="img-paragraph">Brandemburger Tor</p>
-                    </a>
+               <div id="img-tor" class="image">
+                    <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor"
+                         class="media-object img-responsive img-thumbnail">
+                    <p class="img-paragraph tor">Brandemburger Tor</p>
                </div>
           </div>
 
